第三方API的全部改为接收POST,  文档json修改
